Changelog
=========


1.1.2 (unreleased)
------------------

- Nothing changed yet.


1.1.1 (2014-03-05)
------------------

- i18nbuild: Remove "Domain", "Language-Code" and "Language-Name" headers.
  Plone does not need those headers, it takes informations from the path.
  The headers are usually not set correctly, so we just remove them.
  [jone]


1.1.0 (2014-03-05)
------------------

- Implement new bin/i18n-build recipe and script.
  [jone]

- Rename bin/translations to bin/masstranslate.
  [jone]


1.0.2 (2014-01-31)
------------------

- Fix previous brown bag releases: make buildout recipe work.
  [jone]


1.0.1 (2014-01-31)
------------------

- Fix missing distribution buildout error.
  [jone]


1.0.0 (2014-01-31)
------------------

- Initial implementation.
  [jone]