@@ -11,6 +11,7 @@ def discover_package(package_dir, package_name=None):
                      u'pot': None,
                      u'manual': None,
                      u'content': None,
+                     u'lawgiver': None,
                      u'languages': {}}
     items = defaultdict(Group)
 
@@ -33,6 +34,7 @@ def discover_package(package_dir, package_name=None):
         group[u'pot'] = unicode(match[u'relative_path'])
         group[u'manual'] = match[u'manual']
         group[u'content'] = match[u'content']
+        group[u'lawgiver'] = match[u'lawgiver']
 
         if group['locales'] is None:
             group['locales'] = match['locales']
@@ -81,6 +83,8 @@ def _find_pot_files(package_dir, package_name):
             continue
         if re.match('/.*-content\.pot$', filepath):
             continue
+        if re.match('/.*-lawgiver\.pot$', filepath):
+            continue
 
         manual = None
         manual_path = re.sub('\.pot$', '-manual.pot', filepath)
@@ -92,6 +96,11 @@ def _find_pot_files(package_dir, package_name):
         if os.path.exists(content_path):
             content = unicode(path(content_path).relpath(package_dir))
 
+        lawgiver = None
+        lawgiver_path = re.sub('\.pot$', '-lawgiver.pot', filepath)
+        if os.path.exists(lawgiver_path):
+            lawgiver = unicode(path(lawgiver_path).relpath(package_dir))
+
         yield {u'package': package_name,
                u'domain': unicode(filepath.basename().splitext()[0]),
                u'locales': os.path.dirname(path(filepath)
@@ -99,4 +108,5 @@ def _find_pot_files(package_dir, package_name):
                u'relative_path': path(filepath).relpath(package_dir),
                u'absolute_path': filepath,
                u'manual': manual,
-               u'content': content}
+               u'content': content,
+               u'lawgiver': lawgiver}
