@@ -25,6 +25,7 @@ class TestDiscovery(TestCase):
               u'pot': u'foo/bar/locales/foo.bar.pot',
               u'manual': u'foo/bar/locales/foo.bar-manual.pot',
               u'content': None,
+              u'lawgiver': None,
               u'languages': {
                         u'de': u'foo/bar/locales/de/LC_MESSAGES/foo.bar.po',
                         u'en': u'foo/bar/locales/en/LC_MESSAGES/foo.bar.po'}}
@@ -47,6 +48,7 @@ class TestDiscovery(TestCase):
               u'pot': u'foo/bar/locales/foo.bar.pot',
               u'manual': None,
               u'content': None,
+              u'lawgiver': None,
               u'languages': {
                         u'de': u'foo/bar/locales/de/LC_MESSAGES/foo.bar.po',
                         u'en': u'foo/bar/locales/en/LC_MESSAGES/foo.bar.po'}}
@@ -70,6 +72,7 @@ class TestDiscovery(TestCase):
               u'pot': u'foo/locales/bar.pot',
               u'manual': None,
               u'content': None,
+              u'lawgiver': None,
               u'languages': {
                         u'de': u'foo/locales/de/LC_MESSAGES/bar.po'}},
 
@@ -79,6 +82,7 @@ class TestDiscovery(TestCase):
               u'pot': u'foo/locales/foo.pot',
               u'manual': None,
               u'content': None,
+              u'lawgiver': None,
               u'languages': {
                         u'de': u'foo/locales/de/LC_MESSAGES/foo.po',
                         u'en': u'foo/locales/en/LC_MESSAGES/foo.po'}}],
@@ -95,8 +99,9 @@ class TestDiscovery(TestCase):
               u'package': u'foo',
               u'locales': u'foo/locales',
               u'pot': None,
-              u'manual': None,
               u'content': None,
+              u'manual': None,
+              u'lawgiver': None,
               u'languages': {
                         u'en': u'foo/locales/en/LC_MESSAGES/foo.po'}}],
 
@@ -117,6 +122,7 @@ class TestDiscovery(TestCase):
               u'pot': u'bar/locales/foo.pot',
               u'manual': u'bar/locales/foo-manual.pot',
               u'content': None,
+              u'lawgiver': None,
               u'languages': {
                         u'en': u'bar/locales/en/LC_MESSAGES/foo.po'}},
 
@@ -126,6 +132,7 @@ class TestDiscovery(TestCase):
               u'pot': u'bar/locales/bar.pot',
               u'manual': None,
               u'content': None,
+              u'lawgiver': None,
               u'languages': {},
               }],
 
@@ -146,6 +153,7 @@ class TestDiscovery(TestCase):
               u'pot': u'bar/locales/foo.pot',
               u'manual': None,
               u'content': u'bar/locales/foo-content.pot',
+              u'lawgiver': None,
               u'languages': {
                         u'en': u'bar/locales/en/LC_MESSAGES/foo.po'}},
 
@@ -155,6 +163,38 @@ class TestDiscovery(TestCase):
               u'pot': u'bar/locales/bar.pot',
               u'manual': None,
               u'content': None,
+              u'lawgiver': None,
+              u'languages': {},
+              }],
+
+            discovery.discover(self.tempdir))
+
+    def test_lists_lawgiver_pot_files_in_respective_group(self):
+        fshelpers.create_structure(self.tempdir, {
+                u'foo/bar/locales/en/LC_MESSAGES/foo.po': u'',
+                u'foo/bar/locales/foo.pot': u'',
+                u'foo/bar/locales/bar.pot': u'',
+                u'foo/bar/locales/foo-lawgiver.pot': u'',
+                })
+
+        self.assertItemsEqual(
+            [{u'domain': u'foo',
+              u'package': u'foo',
+              u'locales': u'bar/locales',
+              u'pot': u'bar/locales/foo.pot',
+              u'manual': None,
+              u'content': None,
+              u'lawgiver': u'bar/locales/foo-lawgiver.pot',
+              u'languages': {
+                        u'en': u'bar/locales/en/LC_MESSAGES/foo.po'}},
+
+             {u'domain': u'bar',
+              u'package': u'foo',
+              u'locales': u'bar/locales',
+              u'pot': u'bar/locales/bar.pot',
+              u'manual': None,
+              u'content': None,
+              u'lawgiver': None,
               u'languages': {},
               }],
 
