@@ -63,6 +63,21 @@ class TestI18nbuildCommand(TestCase):
         self.assertEquals({'Foo': '',
                            'Login': ''}, pohelpers.messages(*pofile))
 
+    def test_merges_lawgiver_pot_files(self):
+        fshelpers.create_structure(self.tempdir, {
+                'foo/foo/__init__.py': '_("Foo")',
+                'foo/foo/locales/foo.pot': fshelpers.asset('empty.pot'),
+                'foo/foo/locales/foo-lawgiver.pot': fshelpers.asset(
+                    'foo.pot'),
+                'foo/foo/locales/de/LC_MESSAGES/foo.po': fshelpers.asset(
+                    'empty.po'),
+                })
+
+        build_translations(self.tempdir, self.tempdir, 'foo', output=None)
+        pofile = (self.tempdir, 'foo/foo/locales/de/LC_MESSAGES/foo.po')
+        self.assertEquals({'Foo': '',
+                           'Login': ''}, pohelpers.messages(*pofile))
+
     def test_syncs_po_files_of_existing_languages(self):
         fshelpers.create_structure(self.tempdir, {
                 'foo/foo/__init__.py': '_("Foo")',
